fix: fixed content center alignment on complete order page fix: added conditions for rating stars hover and active

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -38,8 +38,9 @@ html {
         background: lightgray;
         cursor: default;
     }
-    &:active:hover {
+    &:active:not(:disabled):hover {
         scale: 1;
+        filter: brightness(110%);
     }
 }
 
